--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: arohmann <arohmann@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/06/17 11:04:41 by arohmann          #+#    #+#              #
-#    Updated: 2021/11/12 12:32:04 by arohmann         ###   ########.fr        #
+#    Updated: 2021/11/19 19:52:29 by arohmann         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -38,6 +38,7 @@ ft_putnbr_fd.c \
 ft_putstr_fd.c \
 ft_split.c \
 ft_free_split_bonus.c \
+ft_free_arr_bonus.c \
 ft_strchr.c \
 ft_strdup.c \
 ft_strjoin.c \
